--- a/escola-qualidade-vida/frontend/public/principal.html
+++ b/escola-qualidade-vida/frontend/public/principal.html
@@ -26,7 +26,13 @@
                 <p>Formulário para cadastro de novos alunos no sistema do departamento.</p>
                 <i class="fas fa-arrow-right card-arrow"></i>
             </a>
-
+            
+            <a class="card" id="link-importar-alunos" href="./importar_alunos.html">
+                <i class="fas fa-file-csv card-icon"></i>
+                <h2>Importar Alunos (CSV)</h2>
+                <p>Envie um arquivo CSV para popular a tabela de alunos.</p>
+                <i class="fas fa-arrow-right card-arrow"></i>
+            </a>
             <a class="card" id="link-cadastro-turma" href="./turmas.html">
                 <i class="fas fa-chalkboard card-icon"></i>
                 <h2>Cadastro de Turmas</h2>
