--- a/escola-qualidade-vida/frontend/public/ocorrencias.html
+++ b/escola-qualidade-vida/frontend/public/ocorrencias.html
@@ -5,22 +5,92 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cadastro de Ocorrência</title>
   <link rel="stylesheet" href="./css/ocorrencias.css" />
+  <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Poppins:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <script src="js/navbar-protection.js"></script>
 </head>
 
 <body>
   <header>
-    <h1>Ocorrências de Alunos</h1>
-    <nav>
-      <ul>
-        <li><a href="./principal.html">Home</a></li>
-        <li><a href="./cadastroAluno.html">Cadastrar Aluno</a></li>
-        <li><a href="./relatorios.html">Relatórios</a></li>
-        <li><a href="./historico.html">Histórico</a></li>
-      </ul>
-    </nav>
-  </header>
+      <div class="header-content">
+        <div class="logo-container">
+          <img
+            src="img/senai-logo.png"
+            class="logo"
+            alt="Logo SENAI"
+          />
+          <h1>Sistema de Gestão de Alunos</h1>
+        </div>
+
+        <nav>
+          <button class="nav-toggle" id="navToggle">
+            <i class="fas fa-bars"></i>
+          </button>
+
+          <ul id="navMenu">
+            <li>
+              <a href="./principal.html" class="active"
+                ><i class="fas fa-home"></i> Home</a
+              >
+            </li>
+
+            <li class="dropdown">
+              <a href="#"
+                ><i class="fas fa-user-graduate"></i> Alunos
+                <i class="fas fa-chevron-down"></i
+              ></a>
+              <div class="dropdown-content">
+                <a href="./cadastroAluno.html"
+                  ><i class="fas fa-user-plus"></i> Cadastrar Aluno</a
+                >
+                <a href="./consultaAluno.html"
+                  ><i class="fas fa-search"></i> Consultar Alunos</a
+                >
+                <a href="./importar_alunos.html"
+                  ><i class="fas fa-file-csv"></i> Importar CSV</a
+                >
+              </div>
+            </li>
+
+            <li>
+              <a href="./turmas.html"
+                ><i class="fas fa-chalkboard"></i> Turmas</a
+              >
+            </li>
+
+            <li>
+              <a href="./ocorrencias.html"
+                ><i class="fas fa-exclamation-triangle"></i> Ocorrências</a
+              >
+            </li>
+
+            <li>
+              <a href="./dashboard.html">
+                <i class="fas fa-history"></i> Dashboard</a>
+            </li>
+
+            <li>
+              <a href="./criar_usuario.html"
+                ><i class="fas fa-user-cog"></i> Usuários</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
   <main>
+    <div class="container">
+      <div class="form-container">
+        <div class="form-header">
+          <h2><i class="fas fa-user-plus"></i> Cadastrar Ocorrências</h2>
+        </div>
     <div id="alerta" style="display: none;"></div>
 
     <label for="buscar_nome">Buscar aluno por nome:</label>
