--- a/escola-qualidade-vida/frontend/public/consultaAluno.html
+++ b/escola-qualidade-vida/frontend/public/consultaAluno.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Consulta de Alunos</title>
+  <script src="js/navbar-protection.js"></script>
   <link rel="stylesheet" href="./css/cadastroAluno.css">
   <style>
     .aluno-card{display:flex;align-items:flex-start;gap:20px;border:1px solid #ccc;border-radius:10px;padding:15px;margin-bottom:20px;background:#fff;box-shadow:0 3px 8px rgba(0,0,0,.1)}
