--- a/escola-qualidade-vida/frontend/public/dashboard.html
+++ b/escola-qualidade-vida/frontend/public/dashboard.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <script src="js/navbar-protection.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@500;600&display=swap"
       rel="stylesheet"
