--- a/escola-qualidade-vida/frontend/public/informacoesAluno.html
+++ b/escola-qualidade-vida/frontend/public/informacoesAluno.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informações do Aluno</title>
     <link rel="stylesheet" href="./css/relatorios.css">
+    <script src="js/navbar-protection.js"></script>
 </head>
 <body>
 
