--- a/escola-qualidade-vida/frontend/public/ocorrencias.html
+++ b/escola-qualidade-vida/frontend/public/ocorrencias.html
@@ -386,8 +386,8 @@
         
         <div id="alerta" style="display: none; padding: 15px; border-radius: 5px; margin-bottom: 20px;"></div>
 
-        <label for="buscar_nome">Buscar aluno por nome:</label>
-        <input type="text" id="buscar_nome" placeholder="Digite o nome do aluno..." autocomplete="off" />
+        <label for="buscar_cpf">Buscar aluno por CPF:</label>
+        <input type="text" id="buscar_cpf" placeholder="Digite o CPF do aluno..." autocomplete="off" />
         <ul id="sugestoes" style="list-style: none; padding-left: 0;"></ul>
 
         <div id="aluno_selecionado" style="display: none; align-items: center; gap: 15px; background: #f8f9fa; padding: 15px; border-radius: 8px; border: 2px solid #dee2e6; margin: 15px 0;">
@@ -426,7 +426,7 @@
     });
 
     // Variáveis globais
-    const buscarInput = document.getElementById("buscar_nome");
+    const buscarCpf = document.getElementById("buscar_cpf");
     const sugestoesUl = document.getElementById("sugestoes");
     const alunoSelecionadoDiv = document.getElementById("aluno_selecionado");
     const nomeExibido = document.getElementById("nome_exibido");
@@ -472,25 +472,32 @@
       }, 5000);
     }
 
-    // 🔍 Busca alunos conforme o usuário digita
-    buscarInput.addEventListener("input", async () => {
-      const nome = buscarInput.value.trim();
+    // Função para formatar CPF
+    function formatarCPF(cpf) {
+      if (!cpf) return '';
+      cpf = cpf.replace(/\D/g, '');
+      return cpf.replace(/(\d{3})(\d{3})(\d{3})(\d{2})/, '$1.$2.$3-$4');
+    }
+
+    // 🔍 Busca alunos por CPF conforme o usuário digita
+    buscarCpf.addEventListener("input", async () => {
+      const cpf = buscarCpf.value.trim().replace(/\D/g, '');
       sugestoesUl.innerHTML = "";
       
-      if (nome.length < 2) {
+      if (cpf.length !== 11) {
         sugestoesUl.style.display = "none";
         return;
       }
 
       try {
-        const response = await fetch(`http://localhost:5000/alunos/buscar?nome=${encodeURIComponent(nome)}`);
+        const response = await fetch(`http://localhost:5000/alunos/buscar?cpf=${cpf}`);
         const data = await response.json();
 
         if (response.ok && Array.isArray(data) && data.length > 0) {
           sugestoesUl.style.display = "block";
           data.forEach(aluno => {
             const li = document.createElement("li");
-            li.textContent = `${aluno.nome} (Matrícula: ${aluno.matricula || 'N/A'})`;
+            li.textContent = `${aluno.nome} (CPF: ${formatarCPF(aluno.cpf)})`;
             li.style.cursor = "pointer";
             li.style.padding = "10px 15px";
             li.style.borderBottom = "1px solid #eee";
@@ -520,7 +527,7 @@
     function selecionarAluno(aluno) {
       alunoSelecionadoDiv.style.display = "flex";
       nomeExibido.textContent = aluno.nome;
-      matriculaExibida.textContent = `Matrícula: ${aluno.matricula || 'N/A'}`;
+      matriculaExibida.textContent = `CPF: ${formatarCPF(aluno.cpf)}`;
       alunoIdInput.value = aluno.id;
 
       // Monta URL da foto
@@ -534,7 +541,7 @@
 
       sugestoesUl.innerHTML = "";
       sugestoesUl.style.display = "none";
-      buscarInput.value = aluno.nome;
+      buscarCpf.value = formatarCPF(aluno.cpf);
     }
 
     // 📤 Envio do formulário de ocorrência
@@ -544,7 +551,7 @@
       // Validação básica: precisa ter aluno escolhido
       if (!alunoIdInput.value) {
         mostrarAlerta("Selecione um aluno antes de cadastrar a ocorrência.", "erro");
-        buscarInput.focus();
+        buscarCpf.focus();
         return;
       }
 
@@ -584,7 +591,7 @@
           form.reset();
           alunoSelecionadoDiv.style.display = "none";
           alunoIdInput.value = "";
-          buscarInput.value = "";
+          buscarCpf.value = "";
           fotoExibida.src = "";
           nomeExibido.textContent = "";
           matriculaExibida.textContent = "";
